apps/architecture-portal/versioned_docs/version-1.0.24.0/assembly/lmdj.mdx
---
title: LMDJ Product Assembly
area: assembly
status: implemented
owners: [product, core, release]
source_paths: [products/lmdj, products/lmdj/assembly.lock.json]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组合
当前 source 为 Product Build `1.0.24.0` 分配八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract。与前一构建相比，Provider SDK 升至 `1.1.2`，Application Facade 升至 `1.4.1`，Web Runtime Platform 升至 `0.3.1`，CLI/MCP/Native/Creator/Formal Web Runtime Host 与两个本地 Proof Provider 也同步完成 PATCH 级联；Contract 集合与 Provider policy 不变。

Product Build `1.0.22.0` 的 LMDJ Assembly 组合八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract，其中新增 `lmdj.project.v2 2.0.0`。它保留 Project I/O Web publication/lease recovery、Browser Main fail-closed、Creator recovery observability、共享 keyboard mapping、MIDI channels 1–16 与 generation cleanup 约束，并加入完整 Sample Editor。Authoring Domain `0.2.0`、Project I/O `0.6.0`、Project Cooker `0.3.0`、Audio Runtime `0.5.0`、Application Facade `1.4.0`、Web Runtime Platform `0.3.0`、CLI `1.0.12`、MCP `1.1.9`、Native Test Host `1.0.10`、Web Runtime Host `1.2.9` 与 Creator Web Host `1.2.0` 是本构建锁定的精确身份；Foundation、Provider SDK、Provider、Capability 与 model identity 保持不变。
## 编译接线
`products/lmdj/src/compiled_assembly.cpp` 是产品专属 wiring；产品中立模块不知道 LMDJ 的具体组合。
Product CMake 只在 Emscripten `lmdj_web_runtime_host` target 存在时链接 compiled catalog object，并注入 Product Build、Platform version 以及 Creator/Diagnostic 两组精确 distribution-contract/Host identity。两个 Web Host 只声明 Web Runtime Platform 依赖；Platform 声明 Facade/Audio 依赖，Provider wiring 仍只属于 Product Assembly。
## Policy
当前 Provider policy 仅允许 local/public/proof.execute 范围，与 Proof-only Provider 相符。
## 身份与完整性
Product Build、每个组件版本和 source hash 被锁定；门户事实生成会拒绝任何漂移。
Project Bundle Contract 仍是 portable transfer 边界；Project v2 是新的创作真相 Contract；同构建 Web transport 仍不是公开 Contract。Provider、Capability 与 model identity 未变化。
## 限制
Sequence/Take、Stage 8B Pad Capture、生产 Provider、云能力、物理 Web 验收与 `beta`/`stable` 均不能由当前 Assembly 成员关系或门户快照推导。Build Identity 只证明当前页面绑定的 Product/Assembly 身份。
